--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "engine-native",
-    "slug": "engine-native",
+    "name": "jetsetEngineNative",
+    "slug": "jetsetEngineNative",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "myapp",
+    "scheme": "jetsetenginenative",
     "userInterfaceStyle": "automatic",
     "splash": {
       "image": "./assets/images/splash.png",
